<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/layout_background"
              android:orientation="vertical"
              tools:context="com.carlt.doride.ui.activity.login.DeviceBindActivity">

    <include
        android:id="@+id/device_bind_title_bar"
        layout="@layout/layout_title"/>

    <ImageView
        android:id="@+id/bind_logo"
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:layout_marginTop="33dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@mipmap/device_bind_logo"/>


    <EditText
        android:id="@+id/car_vin_code"
        style="@style/usercenter_edit1"
        android:layout_height="44dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:layout_marginTop="44dp"
        android:background="@drawable/login_input_bg"
        android:digits="@string/vin_filter_string"
        android:gravity="center_vertical"
        android:hint="@string/usercenter_vin_code"
        android:maxLength="17"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"/>

    <TextView
        android:id="@+id/btn_select_car"
        style="@style/usercenter_edit1"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_input_bg"
        android:drawableRight="@mipmap/arrow_right"
        android:gravity="center_vertical"
        android:text="@string/_car_select_type"
        android:textColor="@color/text_color_gray1"/>

    <TextView
        android:id="@+id/bind_commit"
        style="@style/public_bottom_btn"
        android:layout_height="44dp"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:layout_marginTop="44dip"
        android:text="@string/device_bind_tx"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"/>

</LinearLayout>
