<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/main_color"
              android:orientation="vertical"
              tools:context=".ui.activity.setting.ResetLoginPasswdActivity">

    <EditText
        android:id="@+id/verification_passwd_phone"
        style="@style/usercenter_edit1"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="10dip"
        android:background="@drawable/login_input_bg"
        android:digits="0123456789"
        android:gravity="center_vertical"
        android:hint="@string/usercenter_hint_phone1"
        android:inputType="phone"
        android:maxLength="11"/>

    <LinearLayout
        style="@style/login_input_bg"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/verification_passwd_vcode_input"
            style="@style/usercenter_edit1"
            android:layout_width="0dip"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_weight="1"
            android:background="@null"
            android:digits="0123456789"
            android:hint="@string/usercenter_hint_validate"
            android:inputType="number|textPhonetic"
            android:maxLength="6"/>

        <TextView
            android:id="@+id/verification_passwd_code_send"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/verification_send_bg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/usercenter_push_validate"
            android:textColor="@color/black"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        style="@style/login_input_bg"
        android:layout_marginTop="10dip">

        <EditText
            android:id="@+id/verification_new_passwd_input"
            style="@style/usercenter_edit1"
            android:layout_width="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/pwd_filter_input_string"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/usercenter_hint_phone2"
            android:inputType="textPassword"
            android:maxLength="32"/>

        <ImageView
            android:id="@+id/verification_new_passwd_input_toggle"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:src="@mipmap/passwd_off"
            android:tag="off"/>
    </LinearLayout>

    <LinearLayout

        style="@style/login_input_bg"
        android:layout_marginTop="10dip">

        <EditText
            android:id="@+id/verification_new_passwd_again_input"
            style="@style/usercenter_edit1"
            android:layout_width="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/pwd_filter_input_string"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/usercenter_hint_password_reset"
            android:inputType="textPassword"
            android:maxLength="32"/>

        <ImageView
            android:id="@+id/verification_new_passwd_input_again_toggle"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dip"
            android:src="@mipmap/passwd_off"
            android:tag="off"/>
    </LinearLayout>

    <TextView
        android:id="@+id/verification_reset_passwd_commit"
        style="@style/public_bottom_btn"
        android:layout_height="44dp"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:layout_marginTop="33dip"
        android:text="@string/edit_commit"
        android:textSize="16sp"
        android:textStyle="bold"/>
</LinearLayout>
